--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emna Escuela ministerial Niñez y Adolescencia">
+    <meta name="keywords" content="Niñez, niños, adolecencia, adolescentes, ibrp, emna, teologia">
     <title>EMNA</title>
     <!-- Link Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,7 +19,7 @@
 
 <body class="bg-success" style="--bs-bg-opacity: .6;">
     <!-- ---------------------------------------------HEADER-------------------------------------------------------- -->
-    <header>
+    <header class="bg-secondary">
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
