--- a/html/plandeestudios.html
+++ b/html/plandeestudios.html
@@ -68,10 +68,10 @@
     <main>
 
         <div class="row">
-            <div class="col-4">
+            <div class="col-sm-4">
                 <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
                     <nav class="nav nav-pills flex-column">
-                        <a class="nav-link items" href="#item-1">Primer Ciclo</a>
+                        <a class="nav-link items border-bottom" href="#item-1">Primer Ciclo</a>
                         <nav class="nav nav-pills flex-column">
                             <a class="nav-link ms-3 my-1 items" href="#item-1-1">Teología de la infancia</a>
                             <a class="nav-link ms-3 my-1 items" href="#item-1-2">Hermenéutica/a>
@@ -82,7 +82,7 @@
                             <a class="nav-link ms-3 my-1 items" href="#item-1-7">Misiones</a>
                             <a class="nav-link ms-3 my-1 items" href="#item-1-8">Introducción Bíblica</a>
                         </nav>
-                        <a class="nav-link items" href="#item-2">Segundo Ciclo</a>
+                        <a class="nav-link items border-bottom" href="#item-2">Segundo Ciclo</a>
                         <nav class="nav nav-pills flex-column">
                             <a class="nav-link ms-3 my-1 items" href="#item-2-1">Taller de Recursos Creativos</a>
                             <a class="nav-link ms-3 my-1 items" href="#item-2-2">El Juego como Estrategia Metodológica</a>
@@ -94,7 +94,7 @@
                             <a class="nav-link ms-3 my-1 items" href="#item-2-8">Planificación Efectiva</a>
                         </nav>
 
-                        <a class="nav-link items" href="#item-3">Tercer Ciclo</a>
+                        <a class="nav-link items border-bottom" href="#item-3">Tercer Ciclo</a>
                         <nav class="nav nav-pills flex-column">
                             <a class="nav-link ms-3 my-1 items" href="#item-3-1">Pastoral de Niñez y Adolescencia</a>
                             <a class="nav-link ms-3 my-1 items" href="#item-3-2">Necesidades Especiales en el Aula</a>
