--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/niños.jpg" class="d-block w-100 imgcentro" alt="imagen de niños jugando">
+                    <img src="img/ninos.jpg" class="d-block w-100 imgcentro" alt="imagen de niños jugando">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Niñasriendo.jpg" class="d-block w-100 imgcentro" alt="imagen de niños jugando">
+                    <img src="img/ninasriendo.jpg" class="d-block w-100 imgcentro" alt="imagen de niños jugando">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Niñopelotero.jpg" class="d-block w-100 imgcentro" alt="imagen paisaje">
+                    <img src="img/ninopelotero.jpg" class="d-block w-100 imgcentro" alt="imagen niños en pélotero">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/niñosbandera.jpg" class="d-block w-100 imgcentro" alt="imagen paisaje">
+                    <img src="img/ninosbandera.jpg" class="d-block w-100 imgcentro" alt="imagen niños con banderas">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/niñoscirculo.jpg" class="d-block w-100 imgcentro" alt="imagen paisaje">
+                    <img src="img/ninoscirculo.jpg" class="d-block w-100 imgcentro" alt="imagen circulo de niños">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
