correccion de detalles

--- a/html/dondeestamos.html
+++ b/html/dondeestamos.html
@@ -44,8 +44,7 @@
                                     class="nav-link px-2 text-white">Modalidad</a> </li>
 
                             <li> <a class="nav-link border border-success rounded boton" href="plandeestudios.html"
-                                    class="nav-link px-2 text-white">Plan de
-                                    Estudios</a> </li>
+                                    class="nav-link px-2 text-white">Plan de Estudios</a> </li>
 
                             <li> <a class="nav-link border border-success rounded boton" href="nosotros.html"
                                     class="nav-link px-2 text-white">Nosotros</a> </li>
