correccion de modalidad presencial en pagina modalidades

--- a/html/modalidad.html
+++ b/html/modalidad.html
@@ -101,8 +101,7 @@
                 <h2 class="featurette-heading fw-normal lh-1">Modalidad Presencial</h2>
                 <p class="lead">Cursas en las instalaciones del IBRP, o por Zoom, todos los martes de 18:00 a 21:30 hs.
                     y en el último trimestre de clases (septiembre / noviembre) cursas los martes y miércoles para
-                    completar los estudios en un año.</p><br>
-                <p>
+                    completar los estudios en un año. <br>
                     En esta modalidad tienen las siguientes posibilidades:
                     - Clases dinámicas en vivo y directo.
                     - Interacción e intercambio: grupal y transcultural, compartes trabajos, actividades de forma
