correcciones finales del proyecto en su mayoria esteticas

--- a/html/dondeestamos.html
+++ b/html/dondeestamos.html
@@ -11,6 +11,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" href="../img/favicom.jpg" type="image/x-icon">
 </head>
 
 <body class="bg-success" style="--bs-bg-opacity: .6;">
@@ -22,7 +23,7 @@
                 <a class="navbar-brand" href="#"> </a>
 
                 <a href="../index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img class="bi efecto" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
+                    <img class="bi efecto border-bottom border-top" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
                 </a>
 
                 <!-- --------------------------------------------Menu burger------------------------------- -->
@@ -69,7 +70,7 @@
         <div class="row featurette border m-2 p-3 me-5 rounded">
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">Lugar</h2>
-                <p class="lead">Estamos ubicados en las oficinas del anexo Escuelas, dentro de las instalaciones del
+                <p class="lead border-bottom">Estamos ubicados en las oficinas del anexo Escuelas, dentro de las instalaciones del
                     Instituto Biblico Rio de la PLata (IBRP) frente a la oficina de supervicion y junto a la Escuela
                     Ministerial Juvenil (EMJ).</p>
 
