--- a/html/modalidad.html
+++ b/html/modalidad.html
@@ -11,6 +11,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" href="../img/favicom.jpg" type="image/x-icon">
 </head>
 
 <!-- --------------------------------------------------------------------------------------------------------------- -->
@@ -24,7 +25,7 @@
                 <a class="navbar-brand" href="#"> </a>
 
                 <a href="../index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img class="bi efecto" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
+                    <img class="bi efecto border-bottom border-top" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
                 </a>
 
                 <!-- --------------------------------------------Menu burger------------------------------- -->
@@ -73,22 +74,18 @@
     <main class="m-3">
 
         <p class="text-center m-3 p-3 border rounded">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, libero totam quidem reprehenderit tempora
-            perferendis magnam optio sunt placeat. Architecto illo voluptas consequuntur repellat beatae veritatis fugit
-            iste sed assumenda.
+            Somos una escuela Ministerial, enfocada en la formación integral de maestros dispuestos a servir a la generación de niños/as y adolescentes de hoy. A fin de aportar herramientas para el crecimiento de la iglesia en diferentes culturas.
         </p>
 
         <div class="row featurette border m-2 p-3 me-5 rounded">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">Modalidad Virtual </h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste sequi in distinctio
-                    laboriosam voluptate vel commodi aspernatur ratione reiciendis, ducimus natus beatae, provident
-                    modi. Pariatur tempora error iure numquam dignissimos.</p>
+                <h2 class="featurette-heading fw-normal lh-1 text-center border border-top-0">Modalidad Virtual </h2>
+                <p class="lead"> Disfruta de clases virtuales con nuestros mejores profes. Te podras conectar mediante la plataforma Zoom y de esa manera contar con una experiencia que se acerca a la presencialidad pero ajustandose a tus comodidades. Solo requeriras de la utilizacion de un dispositivo (computadora personal o telefono celular) con el cual puedas conectarte.</p>
             </div>
             <div class="col-md-5">
 
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                    src="../img/virtual.jpg" alt="imagen virtual" width="300" height="300">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded m-3"
+                    src="../img/virtual.jpg" alt="imagen virtual" >
 
 
             </div>
@@ -96,23 +93,19 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette border m-2 p-3 ms-5 rounded">
+        <div class="row featurette border m-2 p-3 rounded">
             <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading fw-normal lh-1">Modalidad Presencial</h2>
-                <p class="lead">Cursas en las instalaciones del IBRP, o por Zoom, todos los martes de 18:00 a 21:30 hs.
-                    y en el último trimestre de clases (septiembre / noviembre) cursas los martes y miércoles para
-                    completar los estudios en un año. <br>
-                    En esta modalidad tienen las siguientes posibilidades:
-                    - Clases dinámicas en vivo y directo.
-                    - Interacción e intercambio: grupal y transcultural, compartes trabajos, actividades de forma
-                    individual y grupal con compañeros de distintos países.
-                    - Crecimiento espiritual, mediante devocionales y tiempo de oración.</p>
+                <h2 class="featurette-heading fw-normal lh-1 text-center border border-top-0">Modalidad Presencial</h2>
+                <p class="lead">Cursas en las instalaciones del IBRP, o por Zoom, todos los martes y jueves de 18:00 a
+                    21:30 hs. En esta modalidad tienen la posibilidad de dictar Clases dinámicas en vivo y
+                    directo.Interactuar de manera grupal. Ademas compartir trabajos y actividades de forma individual y
+                    grupal con compañeros de distintos países.</p>
 
             </div>
             <div class="col-md-5 order-md-1 ">
 
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                    src="../img/presencial.jpg" alt="imagen presencial" width="300" height="300">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded m-3"
+                    src="../img/presencial.jpg" alt="imagen presencial">
 
             </div>
         </div>
@@ -121,14 +114,16 @@
 
         <div class="row featurette border m-2 p-3 me-5 rounded">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">Modalidad FLex</h2>
-                <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad distinctio sunt quidem quo
-                    pariatur dolore omnis labore veniam sed incidunt enim accusantium exercitationem temporibus nisi
-                    illum corporis, corrupti quasi atque?</p>
+                <h2 class="featurette-heading fw-normal lh-1 text-center border border-top-0">Modalidad FLex</h2>
+                <p class="lead">Nuestra modalidad flex tiene una duración mínima de 8 meses, pero puede extenderse el
+                    tiempo que necesites para cubrir la totalidad de los contenidos. Una vez inscrito, tendrás acceso a
+                    todo el material, las sesiones en video, material bibliográfico, trabajos y exámenes
+                    correspondientes. Cada módulo contiene más de 60 videos grabados para poder verlos bajo la
+                    flexibilidad horaria de cada alumno.</p>
             </div>
             <div class="col-md-5">
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                    src="../img/virtual.jpg" alt="imagen flex" width="300" height="300">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded m-3"
+                    src="../img/flex.jpg" alt="imagen flex">
             </div>
         </div>
 
