--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -11,6 +11,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" href="../img/favicom.jpg" type="image/x-icon">
 </head>
 
 <body class="bg-success" style="--bs-bg-opacity: .6;">
@@ -22,7 +23,7 @@
                 <a class="navbar-brand" href="#"> </a>
 
                 <a href="../index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img class="bi efecto" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
+                    <img class="bi efecto border-bottom border-top" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
                 </a>
 
                 <!-- --------------------------------------------Menu burger------------------------------- -->
@@ -70,11 +71,11 @@
         <div class="row m-3">
             <div class="col-lg-6 text-center">
 
-                <img class="imagen bd-placeholder-img rounded-circle efecto" src="../img/daira.jpg"
+                <img class="imagen bd-placeholder-img rounded-circle efecto border p-2" src="../img/daira.jpg"
                     alt="Foto Director emna" width="140" height="140">
                 <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
                 </svg>
-                <h2 class="fw-normal">Daira Alfonso</h2>
+                <h2 class="fw-normal border border-top-0">Daira Alfonso</h2>
                 <p>Impulsar el sueño de Dios en el corazón de cada maestro es nuestro deber, para que sea avivada esa
                     pasión por conocer y abrazar cada aspecto de la niñez y la adolescencia, sembrando a lo largo de su
                     desarrollo. Soñamos con maestros llenos del amor de Dios, dispuestos a levantar una generación de
@@ -86,11 +87,11 @@
 
             <div class="col-lg-6 text-center">
 
-                <img class="imagen bd-placeholder-img rounded-circle efecto" src="../img/ben.jpg"
+                <img class="imagen bd-placeholder-img rounded-circle efecto border p-2" src="../img/ben.jpg"
                     alt="Foto Director IBRP" width="140" height="140">
                 <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
                 </svg>
-                <h2 class="fw-normal">Familia Grams</h2>
+                <h2 class="fw-normal border border-top-0">Familia Grams</h2>
                 <p>El IBRP es la Casa del Alfarero. Es donde Dios trabaja sobre tu persona, tu carácter y tu identidad
                     en Él. Al mismo tiempo, es un lugar donde el Señor te prepara, te capacita y te impulsa hacia el
                     potencial que tenés en Él. Vas a ser desafiado, pero vas a crecer tremendamente; desarrollarás
