--- a/html/plandeestudios.html
+++ b/html/plandeestudios.html
@@ -11,6 +11,8 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" href="../img/favicom.jpg" type="image/x-icon">
+    
 </head>
 
 <body class="bg-success" style="--bs-bg-opacity: .6;">
@@ -21,7 +23,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> </a>
                 <a href="../index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img class="bi efecto" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
+                    <img class="bi efecto border-bottom border-top" width="70" height="70" src="../img/IMAGEN.png" alt="imagen logoibrp">
                 </a>
 
                 <!-- --------------------------------------------Menu burger------------------------------- -->
