--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="shortcut icon" href="img/favicom.jpg" type="image/x-icon">
 </head>
 
 <!-- --------------------------------------------------------------------------------------------------------------- -->
@@ -26,7 +27,7 @@
                 <a class="navbar-brand" href="#"> </a>
 
                 <a href="index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img class="bi efecto" width="70" height="70" src="img/IMAGEN.png" alt="imagen logoibrp">
+                    <img class="bi efecto border-bottom border-top" width="70" height="70" src="img/IMAGEN.png" alt="imagen logoibrp">
                 </a>
 
 
@@ -74,7 +75,8 @@
     <p class="p-3">
         Somos una escuela Ministerial, enfocada en la formación integral de maestros dispuestos a servir a la generación
         de niños/as y adolescentes de hoy. A fin de aportar herramientas para el crecimiento de la iglesia en diferentes
-        culturas.
+        culturas. Impulsar el sueño de Dios en el corazón de cada maestro es nuestro deber, para que sea avivada esa pasión por conocer y abrazar cada aspecto de la niñez y la adolescencia, sembrando a lo largo de su desarrollo. Soñamos con maestros llenos del amor de Dios, dispuestos a levantar una generación de niños y niñas diferentes, sellados por el Espíritu Santo para abrir caminos y volver el corazón de muchas personas al corazón de Dios.
+        Oramos por maestros fieles a la responsabilidad que les ha sido delegada para este tiempo. ¿Te animas a tomar el desafío?
     </p>
 
 
